Slide de nosotros y quienes somos
Slide de nosotros y historia.
con timeset

--- a/index.html
+++ b/index.html
@@ -43,9 +43,35 @@
         </div>
     </div>
 
-    <section class="quiene-somos">
-        <p>Quienes Somos</p>
-    </section>
+    <div class="contenedor">
+        <!-- Slide 1 -->
+        <div class="contenedor__slide contenedor__slide--activo">
+          <div class="contenedor__imagen">
+            <img src="img/sin-imagen.jpg" alt="Imagen 1">
+          </div>
+          <div class="contenedor__texto">
+            <h2 class="contenedor__titulo">¿Quiénes somos?</h2>
+            <p class="contenedor__descripcion">En Modutex, somos una empresa comprometida con la sostenibilidad y la innovación. Nacimos para enfrentar la problemática de los residuos textiles, buscando soluciones que contribuyan a la economía circular. A través de un proceso avanzado de reciclaje y un ecosistema digital para la gestión eficiente de residuos, transformamos desechos en productos útiles y responsables con el medio ambiente. Nuestro material termoacústico, elaborado a partir de textiles reciclados, es una muestra de nuestro compromiso con la sostenibilidad, ofreciendo soluciones para la construcción y decoración de interiores, alineadas con nuestros valores de diseño y responsabilidad ambiental.</p>
+          </div>
+        </div>
+    
+        <!-- Slide 2 -->
+        <div class="contenedor__slide">
+          <div class="contenedor__imagen">
+            <img src="img/sin-imagen.jpg" alt="Imagen 2">
+          </div>
+          <div class="contenedor__texto">
+            <h2 class="contenedor__titulo">Historia</h2>
+            <p class="contenedor__descripcion">Modutex nació para enfrentar la creciente problemática de los residuos textiles generados por la industria y el comercio, agravada por el 'fast fashion', como se observa en el Desierto de Atacama. Creamos un ecosistema digital para gestionar residuos y un proceso mecánico-químico que transforma los desechos en productos sostenibles. Nuestro material innovador, un revestimiento termoacústico hecho de textiles reciclados, es ideal para la construcción y decoración interior, promoviendo proyectos sostenibles y responsables con el medio ambiente.</p>
+          </div>
+        </div>
+    
+        <!-- Navegación con puntitos -->
+        <div class="contenedor__navegacion">
+          <span class="contenedor__punto contenedor__punto--activo" data-slide="0"></span>
+          <span class="contenedor__punto" data-slide="1"></span>
+        </div>
+      </div>
 
     <!--Vision - Mision -->
     <div class="mision-vision">
