#ARREGLADO las proporciones del menu principal
Solucione el problema del menu principal que se movia todo al tener distintos tamaños de pantalla ( falta adaptarlo para moviles aun)

--- a/index.html
+++ b/index.html
@@ -36,12 +36,19 @@
             <div class="text-content">
                 <h2>Bienvenido a ModuTex,</h2>
                 <p>"El propósito de Modutex es cerrar el ciclo de los residuos textiles, dándoles una segunda vida útil. Queremos transformar el problema de los residuos en una oportunidad para mejorar el medio ambiente, reducir costos operativos y fomentar prácticas empresariales responsables."</p>
+                <a href="#" class="card-button">
+                    Read more
+                    <svg class="arrow-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                    </svg>
+                </a>
             </div>
             <div class="img-content">
                 <img src="img/logo.png" alt="Descripción de la imagen" >
             </div>
         </div>
     </div>
+    
 
     <div class="contenedor">
         <!-- Slide 1 -->
@@ -131,6 +138,15 @@
             </div>
         </div>
     </div>
+
+    <!--PROPOSITO-->
+
+    <div class="pagina-proposito-texto">
+        <h4><span class="color-proposito">NUESTRO PROPÓSITO</span></h4>
+        <p>El propósito de Modutex es cerrar el ciclo de los residuos textiles, dándoles una segunda vida útil. Queremos transformar el problema de los residuos en una oportunidad para mejorar el medio ambiente, reducir costos operativos y fomentar prácticas empresariales responsables.</p>
+        <hr class="pagina-proposito-texto-hr">
+    </div>
+    
     <!-- Time Line -->
     <ol class="items-center">
         <li class="item">
@@ -143,9 +159,17 @@
                 <div class="line"></div>
             </div>
             <div class="content">
-                <h3 class="title">Paso 1</h3>
-                <time class="time">Reserva</time>
-                <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam temporibus praesentium nisi, amet nam harum? Soluta, error dicta. Harum odit neque dolore nesciunt ab alias, numquam molestias quod iure eos!</p>
+                <h3 class="title">Objetivo 1</h3>
+                <time class="time">Implementación del Ecosistema Digital</time>
+                <p class="description">
+                        Diagnóstico de reducción de huella de carbono
+                        <br>
+                    •	Desarrollo de la plataforma digital
+                        <br>
+                    •	Integración de tecnologías de trazabilidad
+                        <br>
+                    •	Optimización de la logística inversa
+                    </p>
             </div>
         </li>
         <li class="item">
@@ -158,9 +182,15 @@
                 <div class="line"></div>
             </div>
             <div class="content">
-                <h3 class="title">Paso 2</h3>
-                <time class="time">Busqueda</time>
-                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque similique veniam rem omnis, et sequi asperiores vero perferendis incidunt hic recusandae amet adipisci, laborum pariatur quaerat modi repellendus totam voluptatum?</p>
+                <h3 class="title">Objetivo 2</h3>
+                <time class="time">Optimización y Validación del Prototipo</time>
+                <p class="description">
+                    •	Mejora del prototipo
+                    <br>
+                    •	Pruebas de laboratorio avanzadas                        
+                    <br>
+                    •	Validación en condiciones reales
+                </p>
             </div>
         </li>
         <li class="item">
@@ -173,9 +203,14 @@
                 <div class="line"></div>
             </div>
             <div class="content">
-                <h3 class="title">Paso 3</h3>
-                <time class="time">Relizado</time>
-                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, officia voluptate! Molestias, doloremque qui ratione, praesentium, dolores nihil rem nulla hic vitae autem quam quidem tempore modi? Voluptatem, vero porro!</p>
+                <h3 class="title">Capacitación y Sensibilización</h3>
+                <time class="time">Implementación del Ecosistema Digital</time>
+                <p class="description">
+                    •	Programa de capacitación a municipalidades
+                        <br>
+                    •	Campañas de sensibilización
+                        <br>
+                    </p>
             </div>
         </li>
     </ol>
