--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </a>
       
             <nav class="navbar">
-                <li><a href="#" style="--i:1;"Inicio</a></li>
+                <li><a href="#" style="--i:1;">Inicio</a></li>
                 <li><a href="#" style="--i:2;">Historia</a></li>
                 <li><a href="#" style="--i:3;">Nosotros</a></li>
                 <li><a href="#" style="--i:4;">Servicio</a></li>
@@ -34,8 +34,8 @@
       
         <div class="container">
             <div class="text-content">
-                <h2>Bienvenido a ModuTex,</h2>
-                <p>"El propósito de Modutex es cerrar el ciclo de los residuos textiles, dándoles una segunda vida útil. Queremos transformar el problema de los residuos en una oportunidad para mejorar el medio ambiente, reducir costos operativos y fomentar prácticas empresariales responsables."</p>
+                <h2>¡Bienvenido a ModuTex!</h2>
+                <p>Aquí transformamos residuos textiles en soluciones innovadoras para la construcción y diseño.</p>
                 <a href="#" class="card-button-home">
                     Read more
                     <svg class="arrow-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -243,9 +243,9 @@
         </div>
         <div>
             <ul class="contacto">
-                <li>Dirección: </li>
-                <li>Teléfono: </li>
-                <li>Correo electrónico: </li>
+                <li><img class="medios" src="img/address.png" alt="">Av. Siempre Viva</li>
+                <li><img class="medios" src="img/telephone.png" alt="">+5699999999</li>
+                <li><img class="medios" src="img/mail.png" alt="">correo@modutex.cl</li>
             </ul>
         </div>
      </div>
