--- a/index.html
+++ b/index.html
@@ -249,23 +249,44 @@
             </ul>
         </div>
      </div>
+<!--FOOTER-->
+     <footer class="footer-area">
 
-    <footer class="footer">
-        <div class="footer-container">
-            <a href="#" class="footer-logo">
-                <img src="img/logo.png" class="logo-img" alt="Flowbite Logo" />
-                <span class="logo-text"><span class="verde">Modu</span>Tex</span>
-            </a>
-            <ul class="footer-links">
-                <li><a href="#" class="footer-link">Home</a></li>
-                <li><a href="#" class="footer-link">Servicio</a></li>
-                <li><a href="#" class="footer-link">Contacto</a></li>
-            </ul>
+        <div class="main-footer">
+            <div class="footer">
+                <div class="single-footer">
+                    <h4>About Us</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, adipisci alias non laboriosam deserunt reprehenderit provident ab earum vero tempore dolorem facere eveniet fugit quo sequi magnam necessitatibus sapiente magni.</p>
+                    <div class="footer-social">
+                        <a href=""><i class='bx bxl-facebook'></i></a>
+                        <a href=""><i class='bx bxl-instagram' ></i></a>
+                        <a href=""><i class='bx bxl-tiktok' ></i></a>
+                    </div>
+                </div>
+                <div class="single-footer">
+                    <h4>main menu</h4>
+                    <ul>
+                        <li><a href=""><i class='bx bx-chevron-right' ></i>Home</a></li>
+                        <li><a href=""><i class='bx bx-chevron-right' ></i>Nosotros</a></li>
+                        <li><a href=""><i class='bx bx-chevron-right' ></i>Galería</a></li>
+                        <li><a href=""><i class='bx bx-chevron-right' ></i>Contacto</a></li>
+                    </ul>
+                </div>
+                <div class="single-footer">
+                    <h4>contact us</h4>
+                    <ul>
+                        <li><a href=""><i class='bx bx-map' ></i>>direccion #3432</a></li>
+                        <li><a href=""><i class='bx bx-mobile' ></i>+56999999</a></li>
+                        <li><a href=""><i class='bx bx-envelope' ></i>vita@gmail.com</a></li>
+                        <li><a href=""><i class='bx bx-globe' ></i>www.vita.com</a></li>
+                    </ul>
+                </div>
+            </div>
+        <div class="copy">
+            <p>&copy; 2024 todos los derechos reservados</p>
         </div>
-        <hr class="footer-divider" />
-        <span class="footer-rights">© 2024 <a href="#" class="footer-link">ModuTex™</a>. Todos los derechos reservados.</span>
-    </footer>
-    
+    </div>
+</footer>
     
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
