--- a/Login.html
+++ b/Login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="Login.css">
 </head>
 <body>
+    <div class="background-overlay"></div>
     <a href="index.html" class="back-button">Volver</a>
     <div class="login-container">
         <img src="img/LogoLogin.png" alt="Logo de Reciclaje de Telas">
