--- a/Login.html
+++ b/Login.html
@@ -9,14 +9,30 @@
 <body>
     <div class="background-overlay"></div>
     <a href="index.html" class="back-button">Volver</a>
-    <div class="login-container">
-        <img src="img/LogoLogin.png" alt="Logo de Reciclaje de Telas">
-        <h1>Iniciar Sesión</h1>
-        <form>
-            <input type="text" placeholder="Nombre de usuario" required>
-            <input type="password" placeholder="Contraseña" required>
-            <button type="submit">Entrar</button>
-        </form>
+    <div class="login-register-container">
+        <div class="login-form">
+            <img src="img/LogoLogin.png" alt="Logo de Reciclaje de Telas">
+            <h1>Iniciar Sesión</h1>
+            <form id="loginForm">
+                <input type="text" placeholder="Nombre de usuario" required>
+                <input type="password" placeholder="Contraseña" required>
+                <button type="submit">Entrar</button>
+                <p>¿No tienes una cuenta? <a href="#" id="showRegister">Regístrate</a></p>
+            </form>
+        </div>
+        <div class="register-form" id="registerForm">
+            <h1>Registrarse</h1>
+            <form>
+                <input type="text" placeholder="Nombre completo" required>
+                <input type="email" placeholder="Correo electrónico" required>
+                <input type="tel" placeholder="Número de teléfono" required>
+                <input type="password" placeholder="Contraseña" required>
+                <button type="submit">Registrar</button>
+                <p>¿Ya tienes una cuenta? <a href="#" id="showLogin">Inicia sesión</a></p>
+            </form>
+        </div>
     </div>
+    
+    <script src="Login.js"></script>
 </body>
 </html>
