--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </nav>
       
             <div class="main">
-                <a href="login.html" class="user"><i class='bx bxs-user' ></i>Sign In</a>
+                <a href="Login-registro.html" class="user"><i class='bx bxs-user' ></i>Sign In</a>
                 <div class="bx bx-menu" id="menu-icon"></div>
             </div>   
         </header>
