--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="pagina-proposito-texto" id="objetivo">
         <h4><span class="color-proposito">NUESTRO PROPÓSITO</span></h4>
         <hr class="pagina-proposito-texto-hr">
-        <p>    El propósito de <span class="negro">Modutex</span> es <span class="negro">cerrar el ciclo de los residuos textiles</span>, dándoles una <span class="negro">segunda vida útil</span>. Queremos <span class=negro">transformar el problema de los residuos en una oportunidad</span> para <span class="negro">mejorar el medio ambiente</span>, <span class="negro">reducir costos operativos</span> y <span class="negro">fomentar prácticas empresariales responsables</span>.
+        <p>    El propósito de <span class="morado">Modutex</span> es <span class="morado">cerrar el ciclo de los residuos textiles</span>, dándoles una <span class="morado">segunda vida útil</span>. Queremos <span class="morado">transformar el problema de los residuos en una oportunidad</span> para <span class="morado">mejorar el medio ambiente</span>, <span class="morado">reducir costos operativos</span> y <span class="morado">fomentar prácticas empresariales responsables</span>.
         </p>
 
     </div>
