--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                 <li><a href="#nosotros" style="--i:3;">Nosotros</a></li>
                 <li><a href="#objetivo" style="--i:4;">Objetivos</a></li>
                 <li><a href="#contacto" style="--i:5;">Contacto</a></li>
-                <a href="Login-registro.html" class="user"><i class='bx bxs-user' ></i>Log In</a>
-
+                <a href="Login-registro.html" class="user ocultar"><i class='bx bxs-user' ></i>Log In</a>
             </nav>
       
             <div class="main">
