--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <li><a href="#nosotros" style="--i:3;">Nosotros</a></li>
                 <li><a href="#objetivo" style="--i:4;">Objetivos</a></li>
                 <li><a href="#contacto" style="--i:5;">Contacto</a></li>
-                <a href="Login-registro.html" class="user ocultar"><i class='bx bxs-user' ></i>Log In</a>
+                <a href="Login-registro.html" class="user ocultar"><i class='bx bxs-user' ></i>Iniciar Sesión</a>
             </nav>
       
             <div class="main">
-                <a href="Login-registro.html" class="user"><i class='bx bxs-user' ></i>Log In</a>
+                <a href="Login-registro.html" class="user pc"><i class='bx bxs-user' ></i>Iniciar Sesión</a>
                 <div class="bx bx-menu" id="menu-icon"></div>
             </div>   
         </header>
@@ -44,7 +44,7 @@
                 </a>
             </div>
             <div class="img-content">
-                <img src="img/dibujo-header.png" alt="Descripción de la imagen" >
+                <img src="img/pixelcut-export.png" alt="Descripción de la imagen" >
             </div>
         </div>
     </div>
